# prismformfactors

./: README.md  pyproject.toml
src/: __init__.py  average.py  control.py  dataload.py  formfactor.py
src/prismformfactors/: __init__.py  average.py  controls.py  functions.py  polydispersity.py  rotation.py  visualize.py  wuttke2d.py
